# semops

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: gsi_notes.md  sem_dedup_and_group_by.md  sem_filter.md  sem_join.md
examples/: bench_biodex.py  bench_emails.py  bench_scale.py  bench_specific.py  cb_common.py  cb_ingest.py  demo_couchbase.py  demo_offline.py  eval_classification.py  eval_couchbase.py  gsi_probe.py  gsi_probe2.py  playground.py  quickstart.py  requirements.txt  rerun_benchmarks.py  sample_reviews.txt  tour.py  verify_couchbase_ops.py  verify_gsi_paths.py
examples/data/: reviews_labeled.tsv
go/: cascade.go  cascade_test.go  couchbase.go  filter.go  filter_live_test.go  go.mod  logistic.go  logistic_test.go  model.go  parallel.go  row.go  types.go
src/semops/: __init__.py  backends.py  budget.py  cache.py  cascade.py  clustering.py  operators.py  parallel.py  session.py  telemetry.py  types.py  vectormath.py
src/semops/engines/: __init__.py  base.py  couchbase.py  memory.py
tests/: test_cascade.py  test_parallel.py  test_sem_dedup.py  test_sem_filter.py  test_sem_group_by.py  test_sem_join.py
